--- a/package.json
+++ b/package.json
@@ -1,22 +1,18 @@
 {
-    "name": "Roll-n-Conquer",
-    "version": "1.0.0",
-    "description": "",
-    "main": "server.js",
-    "scripts": {
-        "start": "node server.js",
-        "seed": "node utils seed.js",
-        "dev": "node nodemon server.js"
-    },
-    "keywords": [],
-    "author": "",
-    "license": "ISC",
-    "dependencies": {
-        "bcrypt": "^5.1.1",
-        "graphql": "^16.8.1",
-        "mongoose": "^8.4.0"
-    },
-    "devDependencies": {
-        "nodemon": "^3.1.0"
-    }
+  "name": "roll-n-conquer",
+  "version": "1.0.0",
+  "description": "",
+  "main": "server/server.js",
+  "scripts": {
+    "start": "node server/server.js --ignore client",
+    "develop": "concurrently \"cd server && npm run watch\" \"cd client && npm run dev\"",
+    "install": "cd server && npm i && cd ../client && npm i",
+    "seed": "cd server && npm run seed",
+    "build": "cd client && npm run build"
+  },
+  "author": "",
+  "license": "ISC",
+  "devDependencies": {
+    "concurrently": "^5.3.0"
+  }
 }
