--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,11 @@
   },
   "dependencies": {
     "@apollo/client": "^3.7.14",
+    "@fortawesome/fontawesome-svg-core": "^6.5.2",
+    "@fortawesome/free-solid-svg-icons": "^6.5.2",
+    "@fortawesome/react-fontawesome": "^0.2.2",
+    "bootstrap": "^5.3.3",
+    "framer-motion": "^11.2.6",
     "graphql": "^16.6.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
