--- a/client/package.json
+++ b/client/package.json
@@ -18,6 +18,7 @@
     "framer-motion": "^11.2.6",
     "graphql": "^16.6.0",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.10.2",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.11.2"
   },
