--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,7 @@
     "bootstrap": "^5.3.3",
     "framer-motion": "^11.2.6",
     "graphql": "^16.6.0",
+    "jwt-decode": "^3.1.2",
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.2",
     "react-dom": "^18.2.0",
