--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "concurrently": "^5.3.0"
+    "concurrently": "^8.2.0"
+  },
+  "dependencies": {
+    "dotenv": "^16.4.5"
   }
 }
