--- a/client/package.json
+++ b/client/package.json
@@ -21,7 +21,8 @@
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.2",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.11.2"
+    "react-router-dom": "^6.11.2",
+    "ws": "^8.17.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
