--- a/server/package.json
+++ b/server/package.json
@@ -12,7 +12,11 @@
   "license": "ISC",
   "dependencies": {
     "@apollo/server": "^4.7.1",
+    "@novu/node": "^0.24.2",
     "bcrypt": "^5.1.1",
+    "body-parser": "^1.20.2",
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
     "express": "^4.17.2",
     "graphql": "^16.6.0",
     "jsonwebtoken": "^9.0.2",
