--- a/client/package.json
+++ b/client/package.json
@@ -22,7 +22,7 @@
     "react-bootstrap": "^2.10.2",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.11.2",
-    "ws": "^8.17.0"
+    "socket.io-client": "^4.7.5"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
