--- a/server/package.json
+++ b/server/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "node server.js",
     "seed": "node seeds/seed.js",
-    "watch": "nodemon server.js && ws-server.js"
+    "watch": "nodemon server.js"
   },
   "author": "",
   "license": "ISC",
@@ -21,7 +21,7 @@
     "graphql": "^16.6.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^7.0.2",
-    "ws": "^8.17.0"
+    "socket.io": "^4.7.5"
   },
   "devDependencies": {
     "nodemon": "^2.0.6"
